<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="activity"
                  type="com.example.garethlye.fightingtestmechanic.MainActivity"/>
    </data>
    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#019969">

        <TextView
            android:id="@+id/welcome_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_text"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
        />

        <TextView
            android:id="@+id/welcome_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_textview"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/welcome_desc"
            android:textSize="15sp"
            android:textStyle="bold"
        />

        <Button
            android:id="@+id/splashProceedBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome_desc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:onClick="@{activity::onProceedClick}"
            android:text="@string/proceedText"/>

        <Button
            android:id="@+id/deleteDataBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/splashProceedBtn"
            android:layout_centerHorizontal="true"
            android:onClick="@{activity::onDeleteClick}"
            android:text="@string/deletePreviousDataText"/>

    </RelativeLayout>
</layout>